fix: fix strange error with alignment

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@
 .main {
   display: flex;
   width: 100%;
-  justify-content: center;
 }
 
 .main-left {
